--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+
+
+
 .App {
   text-align: center;
 }
+
+
 
 .App-logo {
   height: 40vmin;
@@ -12,6 +17,12 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
+.section {
+  margin-bottom: 40px; /* Add margin-bottom to create space */
+}
+
+
 
 .App-header {
   background-color: #282c34;
